# easy-rag

./: .gitignore  README.md  hello.py  pyproject.toml
src/: main.py
src/summary/: docs.py  openai.py  youtube.py
tmp/: 1summary.txt  summary.txt
