[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
package = { include = "src", from = "src" }
dependencies = [
    "chromadb==0.6.1",
    "openai>=1.59.3",
    "openai-whisper>=20240930",
    "pip>=24.3.1",
    "python-dotenv>=1.0.1",
    "whisper>=1.1.10",
    "yt-dlp>=2024.12.23",
]
