[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
package = { include = "src", from = "src" }
dependencies = [
    "chromadb==0.6.1",
    "langchain>=0.3.14",
    "matplotlib>=3.10.0",
    "openai>=1.59.3",
    "openai-whisper>=20240930",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.3.1",
    "umap-learn>=0.5.7",
    "whisper>=1.1.10",
    "yt-dlp>=2024.12.23",
]
